infra/k8s/overlays/aws/alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticketing
  namespace: ticketing
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend: { service: { name: back, port: { number: 3000 } } }
          - path: /
            pathType: Prefix
            backend: { service: { name: front, port: { number: 80 } } }
